--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "project-manager-app",
+  "homepage": "http://projects.zafir.koolassets.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
