--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "project-manager-app",
-  "homepage": "https://zafirprojects.synergiart.com",
+  "homepage": "http://zafirprojects.synergiart.com",
   "private": true,
   "version": "0.0.0",
   "type": "module",
