--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
     "react-input-color": "^4.0.1",
+    "react-paginate": "^8.2.0",
     "react-router-dom": "^6.12.1",
     "uuid": "^9.0.0"
   },
